[update] 添加 JVM 内容